<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.MainActivity">

    <Button
        android:id="@+id/Left"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginEnd="10dp"
        android:layout_marginTop="200dp"
        android:text="@string/left"
        app:layout_constraintEnd_toStartOf="@+id/Stop"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/Forward"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginBottom="10dp"
        android:layout_marginStart="120dp"
        android:text="@string/forward"
        app:layout_constraintBottom_toTopOf="@+id/Stop"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/Right"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="200dp"
        android:text="@string/right"
        app:layout_constraintStart_toEndOf="@+id/Stop"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/Backward"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginTop="10dp"
        android:layout_marginStart="120dp"
        android:text="@string/backward"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Stop" />

    <Button
        android:id="@+id/Stop"
        android:visibility="invisible"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginStart="120dp"
        android:layout_marginTop="200dp"
        android:text="@string/stop"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:visibility="invisible"
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:textColor="@color/black"
        android:layout_marginStart="600dp"
        android:layout_marginTop="60dp"
        android:text="@string/speed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:visibility="invisible"
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:textColor="@color/black"
        android:layout_marginStart="600dp"
        android:layout_marginTop="16dp"
        android:text="@string/time"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <EditText
        android:visibility="invisible"
        android:id="@+id/speed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:textSize="12sp"
        android:textColor="@color/black"
        android:hint="@string/enterspeed"
        app:layout_constraintStart_toEndOf="@+id/textView"
        app:layout_constraintTop_toTopOf="parent"
        android:autofillHints="false"
        android:inputType="numberDecimal" />

    <EditText
        android:visibility="invisible"
        android:id="@+id/time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="12sp"
        android:textColor="@color/black"
        android:hint="@string/entertime"
        app:layout_constraintStart_toEndOf="@+id/textView2"
        app:layout_constraintTop_toBottomOf="@+id/speed"
        android:autofillHints="false"
        android:inputType="numberDecimal" />
</androidx.constraintlayout.widget.ConstraintLayout>